# PyRATP

./: .gitignore  .readthedocs.yml  AUTHORS.txt  Makefile  README.md  bld.bat  meson.build  metainfo.ini  native.ini  pyproject.toml  setup.py
.github/workflows/: conda-package-build.yml  openalea_ci.yml
conda/: bld.bat  build.sh  conda_build_config.yaml  environment.yml  meta-bckup.yaml  meta.yaml
doc/: api.rst  conf.py  gallery.rst  index.rst  installation.rst  references.rst
doc/user/: autosum.rst  index.rst  manual.rst  overview.txt  ratp.rst
example/: View_data_frame.py  basics_of_PyRATP.ipynb  create_grid_from_vgx.py  ratp_script.py  run_pyratp.py  run_ratp_from_vgx.ipynb  view_vtk.py
example/data_pyratp/: .~lock.LOD6juin0.2.vgx#  Forcage_sansTROU1_PARdirPOSITIF.mto  LOD6juin0_2.vgx  grid3D-0_5m-vegestar.grd  grid3D-0_5m.grd  gridfromVGX_0_5m.grd  leafarea-0_5m.txt  pommier1_PARmoy12_TA.veg  vegetationa_2004.vfn
example/ratp/: test.py
simple_example_fibbo/: meson.build  mod_fibbo.f  mod_fibbo.f90  myprog.f  myprog.f90
src/alinea/pyratp/: RatpScene.py  grid.py  micrometeo.py  runratp.py  skyvault.py  vege3D.py
src/alinea/pyratp/interface/: clumping_index.py  ratp_scene.py
src/alinea/pyratp_wralea/: WidgetUiRATP_Grid.py
src/f90/: main.f90  mod_Dir_InterceptionF2PY.f90  mod_Energy_BalanceF2PY.f90  mod_Grid3DF2PY_64bit.f90  mod_MicrometeoF2PY.f90  mod_MinerPhenoF2PY.f90  mod_PhotosynthesisF2PY.f90  mod_Shortwave_BalanceF2PY.f90  mod_Vegetation_TypesF2PY.f90  mod_prog_RATP.f90
src/openalea/ratp/: IOtable.py  Nallocate.py  RATP2VTK.py  RatpScene.py  can2riri.py  grid.py  meson.build  micrometeo.py  mtg2ratp.py  mtg_extract.py  runratp.py  skyvault.py  test.py  vege3D.py  vegetation.py
src/openalea/ratp/interface/: clumping_index.py  color_map.py  display.py  geometry.py  meson.build  pgl_scene.py  ratp_scene.py  smart_grid.py  surfacic_point_cloud.py
src/openalea/ratp_wralea/: ExtractColumn.py  ExtractLight.py  ExtractVar.py  WidgetUiRATP_Grid.py  WidgetUiRATP_Vege.py  __wralea__.py  meson.build  ratp.py
src/openalea/ratp_wralea/data/: __wralea__.py  grid3Da_2004.grd  meson.build
src/openalea/ratp_wralea/demo/: __wralea__.py  meson.build
test/: test_LightTuto.py  test_RatpScene.py  test_complet.py  test_display.py  test_grid.py  test_micrometeo.py  test_skyvault.py  test_smart_grid.py  test_surfacic_point_cloud.py  test_vegetation.py
test/data/: MinePommier2004.veg  grid3Da_2004.grd  mmeteo082050_1h.mto
test/test_interface/: test_ratp_scene.py
test/todo_update/: test1.py  testLightTuto.py  test_grid.py  test_micrometeo.py  test_skyvault.py  test_vegetation.py
test/todo_update/essaiRATP2/RATP/grille/: grid3Da_2004.grd
test/todo_update/test_interface/: test_clumping_index.py  test_display.py  test_geometry.py  test_pgl_scene.py  test_surfacic_point_cloud.py  wrong_test_ratp_scene.py
test/updated/: smalltest.py  smalltests.py
test/updated/data/: MinePommier2004.veg  PommierSuisse2004.veg  grid3Da_2004.grd
