

python_sources = [
  '__init__.py',
  'clumping_index.py',
  'color_map.py',
  'display.py',
  'geometry.py',
  'pgl_scene.py',
  'post_processing.py',
  'ratp_scene.py',
  'smart_grid.py',
  'surfacic_point_cloud.py',
]

py.install_sources(
  python_sources,
  pure: false,
  subdir: 'openalea/ratp/interface'
)